Fix overlap issue in agent modal.

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -72,7 +72,7 @@
           height: 267px;
         }
         .contact {
-          margin-left: 33%;
+          margin-left: 293px;
           display: inline-block;
           h4 {
             padding-top: 16px;
